[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3.2"
sysinfo = "0.24.0"
rayon = "1.5"
libc = "0.2"
humansize="2.1"
once_cell = "1.17"
eframe = "0.25"
egui = "0.25"
tokio = { version = "1.41.1", features = ["full"] }
async-openai = "=0.14.3"
dotenv = "0.15"
iced = "0.13.1"
parking_lot = "0.12"
serde_json = "1.0.133"
serde = "1.0.215"
clap = { version = "4.2", features = ["derive"] }
